--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CRYSTALLIZE_TENANT_IDENTIFIER=furniture
 NEXT_PUBLIC_SERVICE_API_URL=https://service-api-demo.superfast.shop/api/graphql
+NEXT_PUBLIC_GRE_APIKEY=AIzaSyDH6_XZG_loCN6JPdyolBT8iuA2az0i_ss
